--- a/mfe-inventory/package.json
+++ b/mfe-inventory/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@skycart/common": "workspace:*",
     "vue": "^3.5.24"
   },
   "devDependencies": {
