--- a/mfe-analytics/package.json
+++ b/mfe-analytics/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
   },
+  "dependencies": {
+    "@skycart/common": "workspace:*"
+  },
   "devDependencies": {
     "@module-federation/vite": "^1.9.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
