--- a/mfe-analytics/tsconfig.app.json
+++ b/mfe-analytics/tsconfig.app.json
@@ -15,7 +15,10 @@
      */
     "allowJs": true,
     "checkJs": true,
-    "moduleDetection": "force"
+    "moduleDetection": "force",
+    "paths": {
+      "@skycart/common": ["../common/src"]
+    }
   },
-  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
+  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte", "../common/src/**/*"]
 }
