--- a/mfe-inventory/package.json
+++ b/mfe-inventory/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@skycart/common": "workspace:*",
+    "@splinetool/runtime": "^1.12.6",
     "vue": "^3.5.24"
   },
   "devDependencies": {
