--- a/shell/Dockerfile
+++ b/shell/Dockerfile
@@ -25,7 +25,7 @@ ARG VITE_API_URL
 ENV VITE_DASHBOARD_URL=$VITE_DASHBOARD_URL
 ENV VITE_INVENTORY_URL=$VITE_INVENTORY_URL
 ENV VITE_ANALYTICS_URL=$VITE_ANALYTICS_URL
-ENV VITE_API_URL=$VITE_API_U
+ENV VITE_API_URL=$VITE_API_URL
 
 # Build
 WORKDIR /app/shell
