--- a/k8s/shell-deployment.yaml
+++ b/k8s/shell-deployment.yaml
@@ -16,21 +16,15 @@ spec:
       containers:
       - name: shell
         image: skycart/shell:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: IfNotPresent  
         ports:
         - containerPort: 80
-        resources:
-          requests:
-            memory: "128Mi"
-            cpu: "100m"
-          limits:
-            memory: "256Mi"
-            cpu: "200m"
+          name: http
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: shell-service
+  name: shell
   namespace: skycart
 spec:
   selector:
@@ -38,4 +32,5 @@ spec:
   ports:
   - port: 80
     targetPort: 80
+    protocol: TCP
   type: LoadBalancer
