--- a/shell/nginx.conf
+++ b/shell/nginx.conf
@@ -4,7 +4,12 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    resolver kube-dns.kube-system.svc.cluster.local valid=5s;
+    resolver_timeout 5s;
+
     gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     location / {
@@ -17,11 +22,24 @@ server {
     }
 
     location /api {
-        proxy_pass http://backend:5000;
+        set $backend_upstream backend.skycart.svc.cluster.local:5000;
+        proxy_pass http://$backend_upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_cache_bypass $http_upgrade;
+        
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
     }
 }
