--- a/shell/nginx.conf
+++ b/shell/nginx.conf
@@ -4,8 +4,9 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    resolver kube-dns.kube-system.svc.cluster.local valid=5s;
-    resolver_timeout 5s;
+    # REMOVE THIS LINE for Docker Compose:
+    # resolver kube-dns.kube-system.svc.cluster.local valid=5s;
+    # resolver_timeout 5s;
 
     gzip on;
     gzip_vary on;
@@ -22,8 +23,11 @@ server {
     }
 
     location /api {
-        set $backend_upstream backend.skycart.svc.cluster.local:5000;
-        proxy_pass http://$backend_upstream;
+        # CHANGE THIS for Docker Compose:
+        # FROM: set $backend_upstream backend.skycart.svc.cluster.local:5000;
+        # TO: proxy_pass http://backend:5000;
+        
+        proxy_pass http://backend:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
