--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.24.0",
   "devDependencies": {
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
     "@gltf-transform/cli": "^4.2.1",
     "@types/three": "^0.181.0",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
@@ -35,7 +37,8 @@
     "install": "^0.13.0",
     "lint-staged": "^16.2.7",
     "npm": "^11.6.4",
-    "prettier": "^3.7.4"
+    "prettier": "^3.7.4",
+    "typescript-eslint": "^8.50.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
